--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -833,7 +833,7 @@
       <script type="text/javascript" src="js/index.js"></script>
       <script type="text/javascript" src="js/functions.js"></script>
       <script type="text/javascript" src="js/monthPicker.js"></script>
-      <script type="text/javascript" src="https://kein-design.de/counter.js"></script>
+      <script type="text/javascript" src="js/counter.js"></script>
       <!--<script type="text/javascript" src="js/jquery.mobile-1.4.2.min.js"></script> -->
       <script type="text/javascript">
          app.initialize(false);
